Update project files and enhance organization for better maintainability.

--- a/src/features/app/server/.env.example
+++ b/src/features/app/server/.env.example
@@ -2,7 +2,14 @@
 PORT=3001
 
 # JWT Secret - CHANGE THIS IN PRODUCTION!
-JWT_SECRET=relativity-secret-key-change-in-production
+JWT_SECRET=relativit-secret-key-change-in-production
 
 # Node Environment
 NODE_ENV=development
+
+# Relativit Trial Mode (for users without API keys)
+# These keys will be used when users enable trial mode
+RELATIVIT_API_KEY=your-relativit-api-key-here
+RELATIVIT_API_PROVIDER=anthropic  # Options: anthropic, openai, gemini
+# Email Configuration
+EMAIL_FROM=noreply@relativit.app
