Add environment separation, deployment docs, and CI/CD workflows
- Add comprehensive deployment guide (docs/DEPLOYMENT.md)
- Add environment setup guide (docs/ENVIRONMENT_SETUP.md)
- Add GitHub Actions CI/CD workflows
- Update .env.example with detailed comments and sections
- Update .gitignore to exclude environment-specific files
- Update README.md with environment separation info
- Fix Gemini model name (gemini-1.5-flash -> gemini-2.5-flash)
- Improve email service error handling for 403 errors
- Add automatic test email fallback for development environment

--- a/src/features/app/server/.env.example
+++ b/src/features/app/server/.env.example
@@ -1,15 +1,54 @@
+# ============================================
 # Server Configuration
+# ============================================
 PORT=3001
-
-# JWT Secret - CHANGE THIS IN PRODUCTION!
-JWT_SECRET=relativit-secret-key-change-in-production
-
-# Node Environment
 NODE_ENV=development
 
-# Relativit Trial Mode (for users without API keys)
-# These keys will be used when users enable trial mode
+# ============================================
+# Database Configuration
+# ============================================
+# Supabase connection string (Session Pooler)
+# Get from: Supabase Dashboard > Settings > Database > Connection Pooling > Session mode
+DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@[YOUR-HOST]:5432/postgres?sslmode=require"
+
+# ============================================
+# Security (IMPORTANT: Generate strong values for production!)
+# ============================================
+# Generate JWT_SECRET: openssl rand -base64 64
+JWT_SECRET=change-me-to-a-long-random-secret-minimum-64-characters
+
+# Generate ENCRYPTION_KEY: openssl rand -base64 32
+ENCRYPTION_KEY=change-me-to-a-32-byte-encryption-key
+
+# ============================================
+# Email Configuration (Resend)
+# ============================================
+# Development: Leave empty to use onboarding@resend.dev automatically
+# Production: Use verified domain (e.g., noreply@relativit.app)
+EMAIL_FROM=
+RESEND_API_KEY=your-resend-api-key-here
+
+# ============================================
+# CORS & App URL
+# ============================================
+# Development
+CORS_ORIGIN=http://localhost:3000
+APP_URL=http://localhost:3000
+
+# Production (uncomment and set for production)
+# CORS_ORIGIN=https://relativit.app
+# APP_URL=https://relativit.app
+
+# ============================================
+# Relativit Trial Mode
+# ============================================
+# API keys used when users enable trial mode (without their own API key)
 RELATIVIT_API_KEY=your-relativit-api-key-here
 RELATIVIT_API_PROVIDER=anthropic  # Options: anthropic, openai, gemini
-# Email Configuration
-EMAIL_FROM=noreply@relativit.app
+
+# ============================================
+# Feature Flags
+# ============================================
+# Demo mode (for local testing - uses fixed verification code)
+# Set to false in production
+DEMO_MODE=false
