--- a/.gitignore
+++ b/.gitignore
@@ -74,8 +74,8 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
-yarn.lock
+# package-lock.json should be committed for reproducible builds
+# yarn.lock
 
 # Rust
 target/
